# cat_chess_stuff

./: Cargo.toml
chess_engine/: Cargo.toml
chess_engine/src/: evaluator.rs  lib.rs  mcts_handler.rs  state.rs
chess_engine/tests/: evaluator.rs
lichess/: Cargo.toml
lichess/src/: ligame.rs  main.rs  world.rs
licoricedev/src/: client.rs
licoricedev/src/models/: board.rs
search_tree/: Cargo.toml
search_tree/examples/: tic_tac_toe_minmax.rs
search_tree/src/: alpha_beta.rs  lib.rs  mini_max.rs
